# falcon-cli

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-daemon-mode-for-credential-isolation.md  0001-implementation-plan.md  0002-implementation-plan.md  0002-macos-code-signing-peer-verification.md
specs/: 00-overview.md  01-authentication.md  02-cli-design.md  03-api-endpoints.md  04-error-handling.md  05-configuration.md  06-project-structure.md
src/: auth.rs  cli.rs  client.rs  dispatch.rs  main.rs  output.rs
src/agent/: client.rs  handler.rs  mod.rs  peer_verify.rs  protocol.rs  security.rs  server.rs
src/commands/: alerts.rs  container_alerts.rs  container_detections.rs  container_image_compliance.rs  container_images.rs  container_packages.rs  container_vulnerabilities.rs  falcon_container.rs  kubernetes_container_compliance.rs  kubernetes_protection.rs  mod.rs
src/daemon/: client.rs  handler.rs  mod.rs  peer_verify.rs  protocol.rs  security.rs  server.rs
tests/: cli_test.rs
