[package]
name = "falcon-cli"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A CLI tool for CrowdStrike Falcon API"
repository = "https://github.com/hiboma/falcon-cli"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
clap_complete = "4.5.66"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"
security-framework-sys = "2"
core-foundation = "0.10"
core-foundation-sys = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
